Updating color handling